--- a/css/styles.css
+++ b/css/styles.css
@@ -316,3 +316,25 @@ input[type="radio"]{
         grid-template-columns: repeat(1, 1fr);
     }
 }
+.post:hover{
+transform: translate(-5px, -10px);
+    box-shadow: 10px 10px 20px -5px #2389d3
+    /*rgba(0,0,0,0.40)*/
+}
+.video-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    margin: 0 auto;
+    box-shadow: 10px 10px 20px -5px #404142; /* Ajusta según tus preferencias */
+    border-radius: 10px; /* Ajusta el valor según tus preferencias para el redondeo del contenedor */
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px; /* Ajusta el valor según tus preferencias para el redondeo del video */
+}
